base/jaeger/deployment.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo
spec:
  revisionHistoryLimit: 1
  template:
    spec:
      enableServiceLinks: false
      containers:
        - name: jaeger
          image: jaegertracing/all-in-one:1.22
          ports:
            - name: jaeger-compact
              containerPort: 6831
              protocol: UDP
            - name: jaeger-binary
              containerPort: 6832
              protocol: UDP
            - name: jaeger-grpc
              containerPort: 14250
            - name: jaeger-http
              containerPort: 14268
            - name: metrics
              containerPort: 14269
            - name: query
              containerPort: 16686
