base/jaeger/service.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaeger
spec:
  ports:
    - name: jaeger-compact
      port: 6831
      protocol: UDP
    - name: jaeger-binary
      port: 6832
      protocol: UDP
    - name: jaeger-grpc
      port: 14250
    - name: jaeger-http
      port: 14268
    - name: metrics
      port: 14269
    - name: query
      port: 16686
  selector:
    app.kubernetes.io/name: jaeger
