base/jaeger/ingress.k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger
  annotations:
    kubernetes.io/ingress.class: default
spec:
  # ingressClassName: default
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix # or Exact, prefix uses path segment matching
            backend:
              service:
                name: jaeger
                port:
                  name: query
                  # number: 80
